--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,17 +1,17 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed");
 
-.xite-fs-small {
+.vp-fs-small {
   font-size: fs("18");
 }
 
-.xite-fs-medium {
+.vp-fs-medium {
   font-size: fs("20");
 }
 
-.xite-fs-big {
+.vp-fs-big {
   font-size: fs("50");
 }
 
-.xite-fs-huge {
+.vp-fs-huge {
   font-size: fs("60");
 }
