--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,11 +9,11 @@
     />
     <meta http-equiv="cleartype" content="on" />
     <title>
-      XITE - Player
+      Video - Player
     </title>
   </head>
 
   <body>
-    <main class="xite"></main>
+    <main class="vp"></main>
   </body>
 </html>
