--- a/src/styles/player.scss
+++ b/src/styles/player.scss
@@ -1,17 +1,17 @@
-#xite-player {
+#vp-player {
   width: 100%;
   height: calc(100% - 7rem);
   opacity: 0;
   pointer-events: none;
   transition: all 300ms ease-in-out;
 
-  &.xite-player--show {
+  &.vp-player--show {
     opacity: 1;
     pointer-events: auto;
   }
 }
 
-.xite-player-logo {
+.vp-player-logo {
   position: fixed;
   width: 100%;
   height: 100%;
