--- a/src/styles/playlist.scss
+++ b/src/styles/playlist.scss
@@ -1,6 +1,6 @@
 $playlist-height: 29rem;
 
-.xite-playlist {
+.vp-playlist {
   $self: &;
   position: fixed;
   top: 100%;
@@ -49,7 +49,7 @@ $playlist-height: 29rem;
   }
 }
 
-.xite-playlist-videos {
+.vp-playlist-videos {
   display: flex;
   list-style: none;
   margin: 0;
